<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/contentView"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextCityName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/show_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonShowWeather"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="showWeatherInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <RadioGroup
            android:id="@+id/radiosTimeRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextCityName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <RadioButton
                android:text="@string/_1_day_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_one_forecast"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/_5_day_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_five_forecast"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/_10_day_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_ten_forecast"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/_15_day_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_fifteen_forecast"
                android:layout_weight="1"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>